--- a/style.css
+++ b/style.css
@@ -853,7 +853,7 @@ button.white{
 /*signup form*/
 
 /* Full-width input fields */
-input[type=text], input[type=password], textarea {
+input[type=text], input[type=password], input[type=email], input[type=tel], textarea {
     width: 25%;
     padding: 15px;
     text-align: right;
@@ -866,7 +866,7 @@ input[type=text], input[type=password], textarea {
 }
 
 /* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus, textarea:focus{
+input[type=text]:focus, input[type=password]:focus,input[type=email]:focus, input[type=tel]:focus, textarea:focus{
     background-color: #ddd;
     outline: none;
 }
