--- a/style.css
+++ b/style.css
@@ -853,7 +853,7 @@ button.white{
 /*signup form*/
 
 /* Full-width input fields */
-input[type=text], input[type=password], input[type=email], input[type=tel], textarea {
+input[type=text],input[type="number"], input[type=password], input[type=email], input[type=tel], textarea {
     width: 25%;
     padding: 15px;
     text-align: right;
@@ -866,12 +866,15 @@ input[type=text], input[type=password], input[type=email], input[type=tel], text
 }
 
 /* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus,input[type=email]:focus, input[type=tel]:focus, textarea:focus{
+input[type=text]:focus, input[type="number"]:focus, input[type=password]:focus,input[type=email]:focus, input[type=tel]:focus, textarea:focus{
     background-color: #ddd;
     outline: none;
 }
 
-
+input[type=text]:required:hover,input[type="number"]:required:hover, input[type=password]:required:hover, input[type=email]:required:hover, input[type=tel]:required:hover, textarea:required:hover{
+    border: 1px solid red;
+    outline: none;
+}
 
 
 /* Extra styles for the cancel button */
