--- a/style.css
+++ b/style.css
@@ -871,10 +871,10 @@ input[type=text]:focus, input[type="number"]:focus, input[type=password]:focus,i
     outline: none;
 }
 
-input[type=text]:required:hover,input[type="number"]:required:hover, input[type=password]:required:hover, input[type=email]:required:hover, input[type=tel]:required:hover, textarea:required:hover{
+/*input[type=text]:required:hover,input[type="number"]:required:hover, input[type=password]:required:hover, input[type=email]:required:hover, input[type=tel]:required:hover, textarea:required:hover{
     border: 1px solid red;
     outline: none;
-}
+}*/
 
 
 /* Extra styles for the cancel button */
